# LightFlow

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: docs-pages.yml
docs/: architecture.md  cortexfs-integration.md  data-layout.md  development-guidelines.md  kernel-policy.md  local-workflow-loop.md  long-term-goals.md  runtime-verification.md  v0.2-checklist.md  workflow-development.md
docs-site/: next.config.mjs  package.json
docs-site/app/: layout.jsx  page.jsx  root.css
docs-site/app/[locale]/: layout.jsx
docs-site/content/en/: _meta.js  api.mdx  architecture.mdx  assets.mdx  cargo-sharing.mdx  cli-publishing.mdx  cli.mdx  concepts.mdx  contributing.mdx  cortexfs.mdx  data-layout.mdx  deployment.mdx  faq.mdx  getting-started.mdx  index.mdx  lifecycle.mdx  roadmap.mdx  runs.mdx  workflow-development.mdx  workflow-dsl.mdx
docs-site/content/zh/: _meta.js  api.mdx  architecture.mdx  assets.mdx  cargo-sharing.mdx  cli.mdx  (+14 more)
docs-site/scripts/: patch-nextra.mjs
example/lightflow/: README.md
examples/abc/: README.md
examples/example/: Cargo.toml
lightflow/: README.md
lightflow-macros/: Cargo.toml
lightflow-macros/src/: lib.rs
lightflow/assets/: README.md
lightflow/components/: README.md  text_prompt.json  text_result.json
lightflow/compositions/: README.md
lightflow/models/: README.md  llm_planner.rs
lightflow/nodes/: README.md  llm_prompt.rs
lightflow/policies/: README.md
lightflow/presets/: README.md
lightflow/runs/: README.md
lightflow/workflows/: README.md  text_plan.rs  workflow.text_plan.json  workflow.text_plan.rs  workflow.text_prompt.rs  workflow.text_result.rs
openapi/: lightflow.yaml
projects/: README.md  lightflow-projects.toml
scripts/: check-source-shape.sh  check.sh
src/: api.rs  asset.rs  cli.rs  component.rs  compositions.rs  cortex.rs  lib.rs  main.rs  mcp.rs  models.rs  nodes.rs  patch.rs  preload.rs  runner.rs  runs.rs  server.rs  stream.rs  trace.rs  workflow.rs  workflows.rs
src/api/: agent_skill.rs  comfyui.rs  deps.rs  dsl.rs  error.rs  execution.rs  executors.rs  flux.rs  flux_native.rs  flux_native_session.rs  history.rs  llm_rig.rs  loop_check.rs  media_paths.rs  model_backend.rs  model_manager.rs  nodes.rs  patch_service.rs  patches.rs  plan.rs  project_config.rs  project_filter.rs  publish_checks.rs  release.rs  replay_fingerprints.rs  run_history_service.rs  service.rs  source.rs  util.rs  validation.rs  workflow_identity.rs  workflow_metadata.rs  writer.rs
src/cli/: add.rs  artifacts.rs  batch.rs  development.rs  history.rs  import.rs  info.rs  install.rs  list.rs  loop_check.rs  mcp.rs  migrate.rs  models.rs  node.rs  node_conformance.rs  patches.rs  project.rs  publish.rs  release.rs  run.rs  run_execution.rs  runtime.rs  support.rs  sync.rs  upgrade.rs  workflow_help.rs  workflows.rs
src/patch/: execution.rs  registry_tests.rs
src/runner/: tests.rs
src/server/: blocking.rs  catalog.rs  checks.rs  mcp.rs  patches.rs  response.rs  run.rs  static_routes.rs  tests.rs  types.rs  workflow.rs
src/workflow/: builder.rs  execution.rs  patch_types.rs  port_macro.rs  program.rs  requirements.rs
tests/: abc_workflow_support.rs  cli.rs  cli_abc_workflow_projects.rs  cli_abc_workspace_dependencies.rs  cli_batch.rs  cli_core.rs  cli_deps_sync.rs  cli_dev_templates.rs  cli_git_workflow_dependencies.rs  cli_loop_agent_skills.rs  cli_loop_dirty_project_git_status.rs  cli_loop_linked_workspaces.rs  cli_loop_project_sources.rs  cli_loop_publish_presence.rs  cli_loop_stale_gitlinks.rs  cli_migrate_workflows.rs  cli_plugin_and_env.rs  cli_project.rs  cli_project_config.rs  cli_project_publish_workflow_crates.rs  cli_project_support.rs  cli_publish_linked_workspaces.rs  cli_publish_workflow_crates.rs  cli_release_gate_plan.rs  cli_release_loop_warnings.rs  cli_release_source_changes.rs  cli_run_conditionals.rs  cli_run_history_replay.rs  cli_run_patch_registry.rs  cli_run_pipeline.rs  cli_run_runtime_errors.rs  cli_run_toggles_and_inputs.rs  cli_std_repository.rs  cli_std_run.rs  cli_sync_agent_skills.rs  cli_sync_gated_hf_repo.rs  cli_sync_model_lock.rs  cli_sync_model_selection.rs  cli_sync_module_dependencies.rs  cli_workflow_discovery.rs  (+27 more)
tests/cli_project_support/: dirty_workspaces.rs
tests/support/: mod.rs
workflows/: README.md
workflows/std/std/: Cargo.toml
workflows/std/std/src/: lib.rs
(+225 files in other folders)
