[package]
name = "lightflow"
version = "0.1.0"
edition = "2024"
description = "Lightweight AI pipelines built by agents and directed by humans."
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightjunction/LightFlow"
keywords = ["ai", "pipeline", "workflow", "backend", "openapi"]
categories = ["web-programming", "development-tools"]

[dependencies]
axum = "0.8.9"
cortex-core = { version = "0.1.0", path = "cortexfs/crates/cortex-core" }
flatbuffers = "25.12.19"
petgraph = "0.8.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
syn = { version = "2.0.117", features = ["full"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["fs"] }
wtransport = "0.7.1"

[dev-dependencies]
tower = "0.5.3"
