[package]
name = "lightflow"
version = "0.1.4"
edition = "2024"
description = "Lightweight AI pipelines built by agents and directed by humans."
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightjunction/LightFlow"
keywords = ["ai", "pipeline", "workflow", "backend", "openapi"]
categories = ["web-programming", "development-tools"]

[workspace]
resolver = "3"
members = [".", "lightflow-macros"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.9"
candle-core = { version = "0.10.2", optional = true, default-features = false }
candle-transformers = { version = "0.10.2", optional = true, default-features = false }
diffusion-rs = { version = "0.1.20", optional = true, default-features = false }
diffusion-rs-sys = { version = "0.1.20", optional = true }
libc = "0.2.186"
lightflow-macros = { path = "lightflow-macros", version = "0.1.2" }
petgraph = "0.8.3"
png = "0.18.1"
regex = "1.12.2"
rig-core = { version = "0.38.2", optional = true }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
syn = { version = "2.0.111", features = ["full"] }
tempfile = "3.23.0"
tokio = { version = "1.52.3", features = ["full"] }
toml_edit = "0.22.27"
ureq = { version = "2.12.1", features = ["json"] }
url = "2.5.8"

[features]
default = ["flux", "gguf"]
flux = []
flux-native = ["flux", "dep:diffusion-rs", "dep:diffusion-rs-sys"]
flux-native-cuda = ["flux-native", "diffusion-rs/cuda"]
flux-native-vulkan = ["flux-native", "diffusion-rs/vulkan"]
gguf = ["dep:candle-core", "dep:candle-transformers"]
gguf-cuda = ["gguf", "candle-core/cuda", "candle-transformers/cuda"]
gguf-metal = ["gguf", "candle-core/metal", "candle-transformers/metal"]
gguf-mkl = ["gguf", "candle-core/mkl", "candle-transformers/mkl"]
flux-cuda = ["flux", "gguf-cuda"]
flux-metal = ["flux", "gguf-metal"]
rig = ["dep:rig-core"]

[dev-dependencies]
tower = "0.5.3"

[patch.crates-io]
diffusion-rs-sys = { path = "vendor/diffusion-rs-sys" }
