[package]
name = "lightflow-macros"
version = "0.1.2"
edition = "2024"
description = "Procedural macros for LightFlow typed workflows."
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightjunction/LightFlow"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.111", features = ["full"] }
