[package]
name = "lightflow-std"
version = "0.1.1"
edition = "2024"
description = "Abstract standard workflow primitives for LightFlow."
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightjunction/LightFlow"
keywords = ["lightflow", "workflow"]
categories = ["development-tools"]

[dependencies]
lightflow = { version = "0.1.1", path = "../../../.." }
